# 2021_Wrestling

./: README.md  Wrestling.ino  Wrestling_211022  Wrestling_211026.ino  Wrestling_Header.cpp  Wrestling_Header.h
Wrestling_Jetson/ArudinoTest/: ArudinoTest.ino
Wrestling_Jetson/CamSensor/: CMakeLists.txt  main.cpp  uart.h
Wrestling_Jetson/CamTest/: CMakeLists.txt  main.cpp
Wrestling_Jetson/UARTTest/: CMakeLists.txt  main.cpp  uart.cpp  uart.h
examples/Wrestling_example/: TestColorSensor.ino  TestIrSensor.ino  TestMotor.ino  TestSerial.ino
wrestling_complete/: algorithm.cpp  algorithm.hpp  function.cpp  functions.hpp  main.ino  motor.cpp  motor.hpp
